backend/internal/architecture/testdata/invalid/internal/modules/identity/placeholder.go
// Package identity demonstrates a forbidden future module placeholder.
package identity

// Placeholder exists only for architecture rejection.
const Placeholder = true
